# cat-litter-box

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/Fleet-Provisioning-for-AWS-IoT-embedded-sdk/: sbom.yml
components/Jobs-for-AWS-IoT-embedded-sdk/: CMakeLists.txt  sbom.yml
components/aws-iot-core-mqtt-file-streams-embedded-c/: CMakeLists.txt  Kconfig  idf_component.yml  sbom.yml
components/aws-iot-core-mqtt-file-streams-embedded-c/config/: ota_config.h
components/aws-iot-core-mqtt-file-streams-embedded-c/port/: ota_os_freertos.c  ota_os_freertos.h  ota_pal.c
components/backoffAlgorithm/: sbom.yml
components/common/: CMakeLists.txt
components/common/crypto/: cryptoFilePaths.cmake  iot_crypto.c  iot_crypto.h
components/coreJSON/: sbom.yml
components/coreMQTT/: sbom.yml
components/coreMQTT/port/network_transport/: network_transport.c  network_transport.h
components/corePKCS11/: CMakeLists.txt  sbom.yml
components/corePKCS11/config/: core_pkcs11_config.h
components/corePKCS11/port/: core_pkcs11_pal.c
components/espressif__cbor/tinycbor/: .tag
components/espressif__cbor/tinycbor/src/: open_memstream.c
main/: CMakeLists.txt  Kconfig.projbuild  app_config_flash.c  app_config_flash.h  app_nvs.c  app_nvs.h  current_monitor.c  current_monitor.h  dc_motor_control.c  dc_motor_control.h  idf_component.yml  keyscan.c  keyscan.h  led.c  led.h  loadcell.c  loadcell.h  main.c  main.h  motor.c  motor.h  sensor.c  sensor.h  step_motor_control.c  step_motor_control.h  ui.c  ui.h  uv_led.c  uv_led.h  wifi_rssi_test.c  wifi_rssi_test.h
main/ble/: ble_parse.c  ble_parse.h  ble_rx_task.c  ble_rx_task.h  ble_task.c  ble_task.h  ble_tracker_id.c  ble_tracker_id.c.bak  ble_tracker_id.h  ble_tx_task.c  ble_tx_task.h
main/config/: device_config.h
main/crypto/: ble_crypto.c  ble_crypto.h
main/mqtt/: mqtt_parse.c  rx_mqtt.c  rx_mqtt.h  topic_list.h  tx_mqtt.c  tx_mqtt.h
main/provisioning/: aws_iot_config.h  aws_iot_task.c  aws_iot_task.h  fleet_provisioning_serializer.c  fleet_provisioning_with_csr_demo.c  mbedtls_pkcs11_posix.c  mqtt_operations.c  mqtt_operations.h  pkcs11_operations.c
main/wifi/: http_ota.c  http_ota.h  wifi_task.c  wifi_task.h
